// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyPlaceRewardsOverviewTile component should render correctly when coupons are not present 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="black"
    margin={null}
    numberOfLines={null}
    text="lbl_overview_myPlaceRewardsHeading"
    textDecoration={null}
  />
  <Styled(LineComp)
    borderColor="gray"
    borderWidth={0.5}
    marginBottom={20}
    marginLeft={0}
    marginRight={0}
    marginTop={24}
  />
  <View>
    <Styled(BodyCopy)
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs13"
      margin={null}
      numberOfLines={null}
      text="lbl_overview_myPlaceRewardsDesc"
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(CustomButton)
        active={false}
        buttonVariation="fixed-width"
        color=""
        customStyle={Object {}}
        customTextStyle={null}
        disableButton={false}
        fill=""
        fullWidth=""
        iconColor="gray.800"
        iconName="chevron-down"
        iconSize="fs12"
        locator=""
        navigation={Object {}}
        onPress={[Function]}
        paddings="12px 32px 12px 32px"
        selected={false}
        selectedIcon="chevron-up"
        showIcon={false}
        text="lbl_overview_myPlaceRewardsShopNow"
        theme={Object {}}
        url=""
        withNoLineHeight={false}
      />
    </Styled(View)>
  </View>
  <Styled(LineComp)
    borderColor="gray"
    borderWidth={0.5}
    marginBottom={20}
    marginLeft={0}
    marginRight={0}
    marginTop={24}
  />
  <Styled(View)>
    <Styled(CustomButton)
      active={false}
      buttonVariation="fixed-width"
      color=""
      customStyle={Object {}}
      customTextStyle={null}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      iconColor="gray.800"
      iconName="chevron-down"
      iconSize="fs12"
      locator=""
      navigation={Object {}}
      onPress={[Function]}
      paddings="12px 32px 12px 32px"
      selected={false}
      selectedIcon="chevron-up"
      showIcon={false}
      text="lbl_overview_myPlaceRewardsCTA"
      theme={Object {}}
      url=""
      withNoLineHeight={false}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`MyPlaceRewardsOverviewTile component should render correctly when coupons are present 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="black"
    margin={null}
    numberOfLines={null}
    text="lbl_overview_myPlaceRewardsHeading"
    textDecoration={null}
  />
  <Styled(LineComp)
    borderColor="gray"
    borderWidth={0.5}
    marginBottom={20}
    marginLeft={0}
    marginRight={0}
    marginTop={24}
  />
  <Styled(View)>
    <View>
      <Styled(BodyCopy)
        accessibilityText=""
        data-locator="accountoverview-myplacerewatdstile-youhaverewardtext"
        dataLocator=""
        fontSize="fs14"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text=""
        textDecoration={null}
      />
    </View>
    <Styled(View)>
      <CouponList
        commonLabels={Object {}}
        coupons={
          Immutable.List [
            Object {},
          ]
        }
        labels={
          Object {
            "lbl_overview_myPlaceRewardsAvailable": "",
          }
        }
        sliceCount={2}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(LineComp)
    borderColor="gray"
    borderWidth={0.5}
    marginBottom={20}
    marginLeft={0}
    marginRight={0}
    marginTop={24}
  />
  <Connect(BonusPointsDays)
    labels={
      Object {
        "lbl_overview_myPlaceRewardsAvailable": "",
      }
    }
    view="read"
  />
  <Styled(View)>
    <Styled(CustomButton)
      active={false}
      buttonVariation="fixed-width"
      color=""
      customStyle={Object {}}
      customTextStyle={null}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      iconColor="gray.800"
      iconName="chevron-down"
      iconSize="fs12"
      locator=""
      navigation={Object {}}
      onPress={[Function]}
      paddings="12px 32px 12px 32px"
      selected={false}
      selectedIcon="chevron-up"
      showIcon={false}
      text="lbl_overview_myPlaceRewardsCTA"
      theme={Object {}}
      url=""
      withNoLineHeight={false}
    />
  </Styled(View)>
</Styled(View)>
`;
